--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -374,7 +374,7 @@
                     <div id="attr" class="tab-pane" role="tabpanel" style="display: none">
                         <div class="row">
                             <div class="col-md-2 hidden-xs-down hidden-sm-down">
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="hitPiercePunch"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="hitPiercePunch" ng-click="hitPiercePunchAnimateRelatedAttributes()"
                                         title="Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/hitPiercePunch.svg" class="ng-scope"
@@ -383,7 +383,7 @@
                                     <span class="ng-binding ng-scope">{{hitPiercePunch}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline" ng-click="clickTargetButton()"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="hitChopPunch" ng-click="hitChopPunchAnimateRelatedAttributes()"
                                         title="Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/hitChopPunch.svg"
@@ -392,7 +392,7 @@
                                     <span class="ng-binding ng-scope">{{hitChopPunch}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="rangedHit" ng-click="rangedHitAnimateRelatedAttributes()"
                                         title="Количество кубиков на бросок попадания при стрельбе из луков, арбалетов и использовании метательного оружия. Равно ловкости+восприятию персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/rangedHit.svg"
@@ -400,7 +400,7 @@
                                     <span class="ng-binding ng-scope">{{rangedHit}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="parryPiercePunch" ng-click="parryPiercePunchAnimateRelatedAttributes()"
                                         title="Количество кубиков на парирование колющих/режущих ударов. Равно скорости+реакции персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/parryPiercePunch.svg"
@@ -409,7 +409,7 @@
                                     <span class="ng-binding ng-scope">{{parryPiercePunch}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="parryChopPunch" ng-click="parryChopPunchAnimateRelatedAttributes()"
                                         title="Количество кубиков на парирование рубящего удара. Равно силе+реакции персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/parryChopPunch.svg"
@@ -421,7 +421,7 @@
                             </div>
                             <div class="col-md-2 hidden-xs-down hidden-sm-down">
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="dodge" ng-click="dodgeAnimateRelatedAttributes()"
                                         title="Количество кубиков на уклонение от атак. Равно ловкости+реакции персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/dodge.svg" class="ng-scope tooltips"
@@ -429,7 +429,7 @@
                                     <span class="ng-binding ng-scope">{{dodge}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="generalActionPoints" ng-click="generalActionPointsAnimateRelatedAttributes()"
                                         title="Количество физических действий, совершаемых в раунд (удары, парирование, уклонение). Равно меньшему значению из скорости и интеллекта персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/generalActionPoints.svg"
@@ -438,7 +438,7 @@
                                     <span class="ng-binding ng-scope">{{generalActionPoints}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="mentalActionPoints" ng-click="mentalActionPointsAnimateRelatedAttributes()"
                                         title="Количество ментальных действий, совершаемых в раунд (активация способностей). Равно интеллекту персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/mentalActionPoints.png"
@@ -447,7 +447,7 @@
                                     <span class="ng-binding ng-scope">{{mentalActionPoints}}</span>
                                 </button>
 
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="endurancePoints" ng-click="endurancePointsAnimateRelatedAttributes()"
                                         title="Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/endurancePoints.svg"
@@ -455,7 +455,7 @@
                                          width="40">
                                     <span class="ng-binding ng-scope">{{endurancePoints}}</span>
                                 </button>
-                                <button class="btn btn-info-outline btn-rounded produced margin-inline"
+                                <button class="btn btn-info-outline btn-rounded produced margin-inline" id="initiative" ng-click="initiativeAnimateRelatedAttributes()"
                                         title="Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"
                                         rel="tooltip">
                                     <img src="/assets/common/img/erilon-icon/initiative.svg"
@@ -467,7 +467,7 @@
                             <div class="col-md-8">
                                 <table id="attrTable" class="table table-hover">
                                     <tr ng-repeat="personageAttribute in personageAttributes">
-                                        <td>{{ personageAttribute.Attribute.name}}</td>
+                                        <td id="{{personageAttribute.Attribute.name}}">{{ personageAttribute.Attribute.name}}</td>
                                         <td>
                                             <div class="btn-group btn-group-justified plus-minus-block">
                                                 <div class="btn-group">
