--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -46,6 +46,7 @@
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="/assets/common/css/source/main.css">
     <link rel="stylesheet" type="text/css" href="/assets/common/css/source/custom.css">
+    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/animate.css">
 
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
